--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: My Jekyll Website
+title: Satwik Mukherjee
 # logo : 
 show_downloads: true
 description: A simple website built with Jekyll
