--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: Satwik Mukherjee
 # logo : 
-show_downloads: true
+# show_downloads: true
 # description: A simple website built with Jekyll
 # baseurl: "/"
 
